# dataminer

./: .gitignore  README.md  main.py  pyproject.toml
exporters/: csv_exporter.py  excel_exporter.py  json_exporter.py
models/: product.py
scrapers/: amazon_scraper.py  base_scraper.py  books_scraper.py  ebay_scraper.py  generic_scraper.py
tests/: test_ebay_scraper.py  test_exporters.py  test_helpers.py  test_product.py
utils/: helpers.py  logger.py
